fix header image repeat bug on mobile

--- a/source/style.scss
+++ b/source/style.scss
@@ -699,6 +699,7 @@ a#pagetitle {
   background-image: url(/packagestatic/docassemble.jcc.abilitytopay/california-courts-logo.png);
   color: transparent;
   background-size: contain;
+  background-repeat: no-repeat;
   padding-top: 0;
   padding-bottom: 0;
   width: 242px;  // 484
